--- a/trunk/po/fr.po
+++ b/trunk/po/fr.po
@@ -7,12 +7,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gRun 0.9.2 \n"
 "POT-Creation-Date: 1999-02-06 15:28+0200\n"
-"PO-Revision-Date: 1999-02-06 14:+0200\n"
+"PO-Revision-Date: 2007-09-24 14:23-0500\n"
 "Last-Translator: Mathieu Lutfy <mathieu.lutfy@videotron.ca>\n"
 "Language-Team: Mathieu Lutfy <mathieu.lutfy@videotron.ca>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: grun.c:838
 msgid "Choose Application"
