--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-17  Rodrigo Gallardo
+	* Remove WIN32 port code. I have not the experience, the tools, nor
+	the inclination to maintain it.
+
 2007-12-11  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
