Install gassoc and consfile to SYSCONFDIR.
Since these files are customizable by the sysadmin, they are better
installed to sysconfdir.

Reorganize a bit Makefile.am, but the only real change is the location
of the files.

Record this change in the Changelog. This is the real 0.9.3 release. Lucky
me had not tagged anything in svn or uploaded a tarball yet.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	This release includes most of the patches from the Debian package,
 	as well as a few extra cleanups. Please see the svn log for
 	details on each change.
+	* gassoc and consfile are now installed to sysconfdir, as they are
+	customizable by the sysadmin.
 
 2007-12-17  Rodrigo Gallardo
 	* Remove WIN32 port code. I have not the experience, the tools, nor
